<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagen"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tituloTxt"
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView04"
                    style="@style/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oferta" />

                <TextView
                    android:id="@+id/precioOfertaTxt"
                    style="@style/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    style="@style/etiqueta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ahorro" />

                <TextView
                    android:id="@+id/ahorroTxt"
                    style="@style/textoPequenioDerecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/etiqueta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular" />

                <TextView
                    android:id="@+id/precioRegularTxt"
                    style="@style/textoPequenioDerecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView03"
                    style="@style/etiqueta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_vencimiento" />

                <TextView
                    android:id="@+id/fechaVencimientoTxt"
                    style="@style/textoPequenioDerecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
